# NN-Tasks

./: .gitignore  DigitClassification.ipynb  DigitClassification.py  LinearRegression.ipynb  LinearRegression.py  MergeSplit3D.ipynb  MergeSplit3D.py  MergeSplit4D.ipynb  MergeSplit4D.py  RegressionNeuronModel.ipynb  RegressionNeuronModel.py  Tensor3D.ipynb  Tensor3D.py  pyproject.toml
