[project]
name = "dl-excercises"
version = "0.1.0"
description = "Deep Learning excercises using TensorFlow"
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tensorflow>=1.3.0",
]
