[project]
name = "dl-excercises"
version = "0.1.0"
description = "Deep Learning excercises using TensorFlow"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "intel-extension-for-tensorflow>=2.15.0.3",
    "keras>=2.15.0",
    "marimo>=0.14.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.15.1",
]
